# review-agent-v3

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  pyproject.toml
deploy/: install-multimodal.sh  install-user.sh  install.sh  secrets.env.example  uninstall.sh
deploy/caddy/: review-agent.caddy
deploy/systemd/: review-agent-user.service  review-agent.service
docs/: ARCH.md  PRD.md  REPORT.md  v301-live-test-debuglog.md
review_agent/: app.py  cli.py  config.py  secrets.py
review_agent/core/: dispatcher.py  enums.py  models.py  schema.sql  storage.py
review_agent/lark/: client.py  parser.py  token.py  types.py  webhook.py
review_agent/llm/: base.py  deepseek.py  fake.py
review_agent/pipeline/: _format.py  _intents.py  _json.py  _prompts.py  build_summary.py  confirm_topic.py  deliver.py  final_gate.py  ingest.py  merge_draft.py  qa_loop.py  scan.py
review_agent/pipeline/delivery_backends/: __init__.py  base.py  lark_dm.py  lark_doc.py  local_path.py  (+1 more)
review_agent/prompts/: build_summary.md.j2  confirm_topic.md.j2  dm_templates.md.j2  final_gate.md.j2  merge_draft.md.j2  persona.md.j2  qa_emit_finding.md.j2  scan_four_pillar.md.j2  scan_responder_sim.md.j2
review_agent/routers/: dashboard.py  health.py  lark_webhook.py
review_agent/slack/: __init__.py  adapter.py  mrkdwn.py  types.py
review_agent/tasks/: queue.py  worker.py
review_agent/util/: file_magic.py  ids.py  log.py  md.py  path.py
tests/: conftest.py  test_auto_register.py  test_busy_stage_recovery.py  test_close_chain.py  test_close_chain_no_regressions.py  test_close_confirmation.py  test_close_delivery.py  test_dispatcher_multimodal.py  test_file_magic.py  test_format.py  test_gemini_fallback.py  test_intents.py  test_json.py  test_lark_client_post.py  test_lark_doc_backend.py  test_lark_lock.py  test_lark_parser.py  test_lark_retry.py  test_lark_update.py  test_lark_user_cache.py  test_lark_webhook.py  test_material_confirm.py  test_models.py  test_path.py  test_pipeline_with_fake_llm.py  test_prompts_render.py  test_qa_loop.py  test_queue.py  test_set_model.py  test_storage.py  test_subject_confirm_url.py
(+11 files in other folders)
