[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-agent"
version = "3.1.0"
description = "Async pre-meeting CSW-style review coach for Lark"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.26",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "ulid-py>=1.1",
    "cryptography>=42",
    "python-multipart>=0.0.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "freezegun>=1.4",
    "ruff>=0.3",
    "mypy>=1.8",
]
# default multimodal: pure-Python deps. tesseract / whisper.cpp are optional
# system binaries — install via `bash deploy/install-multimodal.sh` (one-click).
multimodal = [
    "pdfminer.six>=20231228",      # PDF text extraction
    "readability-lxml>=0.8",       # web article body extraction
    "beautifulsoup4>=4.12",        # web fallback parser
    "lxml>=5",                     # parser backend
    "markdownify>=0.12",           # html → markdown
]
# back-compat alias for v3.0.x install scripts
ingest = [
    "pdfminer.six>=20231228",
    "readability-lxml>=0.8",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "markdownify>=0.12",
]
# heaviest install (~1.5GB w/ torch) — only if you want Python-side whisper
# instead of whisper.cpp + OpenAI Whisper API.
multimodal-local-whisper = [
    "openai-whisper>=20231117",
]

[project.scripts]
review-agent = "review_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["review_agent*"]

[tool.setuptools.package-data]
review_agent = ["prompts/*.j2", "core/schema.sql", "migrations/*.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
